@startuml

skinparam classAttributeIconSize 12


title MobilBank AMEK UML 1

' ---------- MAIN ----------
class Main {
    + main(args : String[]) : void
}

' ---------- BANKMENU ----------
class BankMenu {
    - UIText ui
    - DBconnection db
    - User loggedInUser
    - ArrayList<String> mainMenuOptions
    + void start()
    + void createAccount()
    + void login()
    + void logout()
    + void showMainMenu()
    + void chooseFromMenu()
    + void deposit()
    + void withdraw()
    + void showBalance()
    + void showTransactions()
    + void bankAccount()
    + void viewAccountInfo()
    + boolean isValidMail(String mail)
}

' ---------- DOMAIN ----------
class User {
    - int userID
    - String userName
    - String firstName
    - String lastName
    - String userEmail
    - String password
    - String phoneNumber
    + int getUserID()
    + String getUserName()
    + String getFirstName()
    + String getLastName()
    + String getUserEmail()
    + String getPassword()
    + String getPhoneNumber()
    + boolean checkPassword(String password)
}

class Account {
    - int accountID
    - double balance
    - String accountType
    - User owner
    - List<Transactions> transactions

    + int getAccountID()
    + double getBalance()
    + List<Transactions> getTransactions()
    + void deposit(double amount)
    + boolean withdraw(double amount)
    + boolean canAfford(double amount)
    + void addTransaction(Transactions t)
    + void printTransactions()
}

class Transactions {
    - int transactionID
    - Date localDateTime
    - String type
    - double amount
    - Account fromAccount
    - Account toAccount

    + String getSummary()
}

' ---------- SERVICES ----------
class Deposit {
    + void depositAmount(Account account, double amount)
    + Transactions createDepositTransaction(Account account, double amount)
}

class Withdraw {
    + boolean withdrawAmount(Account account, double amount)
    + Transactions createWithdrawTransaction(Account account, double amount)
}

class Saldo {
    + double getBalance(Account account)
    + void printBalance(Account account, UIText ui)
    + String formatBalance(double value)
}

' ---------- UTIL ----------
package UTIL {
    class DBconnection {
        - Connection connection
        + void connect(String dataURL)
        + void createBankAccountInformation(User user)
        + void userInformation(int userId)
        + User loginUser(String username, String password)
        + User getUserById(int userId)
        + void createBalanceAccount(int userId, String accountName)
        + void userShowBalance(int userId)
        + Account getAccountById(int accountId)
        + void saveAccount(Account account)
        + double getBalanceByAccountId(int accountId)
        + boolean updateBalanceByAccountId(int accountId, double newBalance)
        + boolean validateAccountOwnership(int userId, int accountId)
        + void addTransaction(int balanceId, double withdraw, double deposit, double transfer)
        + void getTransactionHistory(int userId)
    }

    class UIText {
        - Scanner scanner
        + void displayMsg(String msg)
        + void displayError(String msg)
        + String promptTxt(String prompt)
        + int promptNumericInt(String prompt)
        + double promptNumericDouble(String prompt)
    }
}

' ---------- RELATIONER ----------
Main o-- BankMenu

BankMenu o-- User
User o-- Account
Account o-- Transactions

BankMenu o-- Deposit
BankMenu o-- Withdraw
BankMenu o-- Saldo

BankMenu o-- DBconnection
BankMenu o-- UIText

@enduml